--- a/1.css
+++ b/1.css
@@ -1,11 +1,11 @@
 p{
 	 
-	 float: left;
-	background-color: #FFB90F;
-   margin: 0px;  
-   padding-bottom: 30%;  
-   width: 30%;  
-   height: 0;  
-   border: 1px solid white; 
-	border-radius: 10px;
+   float: left;
+   background-color: #FFB90F;
+   margin: 0px auto;  
+   padding-bottom: 25%; 
+   border: 5px solid white; 
+   width: 25%;  
+   height: 0;   
+   border-radius: 30px;
 }
